--- a/LibraryManagement/src/app/login/login.component.html
+++ b/LibraryManagement/src/app/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<h1>LOGIN</h1>
+
+Username
+<input [(ngModel)]="username">
+<br/>
+
+Password
+<input [(ngModel)]="password">
+<br/>
+
+<button (click) = "login(username,password)">LOGIN</button>
