--- a/LibraryManagement/src/app/book-nav/book-nav.component.html
+++ b/LibraryManagement/src/app/book-nav/book-nav.component.html
@@ -2,14 +2,30 @@
   <div class="col">
     <ul class="list-group">
       <li class="list-group-item active">
-        Courses
+        Books
       </li>
       <li *ngFor="let book of books"
-          (click)="selectBook(book)"
-          [ngClass]="{'active': book.id == selectedBook.id}"
+          (click)="selectedBooks(book)"
+          [ngClass]="{'active': book.id == selectedBooks.id}"
           class="list-group-item">
         {{book.title}}
       </li>
       </ul>
+  </div>
+
+  <div>
+    <table class="table">
+      <tr>
+        <th>Book ID</th>
+        <th>Author</th>
+        <th>Book Title</th>
+        <th>Book Type</th>
+      </tr>
+
+
+    </table>
+
+
+
   </div>
 </div>
